--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
         <url>http://www.sub.uni-goettingen.de
         </url>
     </organization>
+    <licenses>
+        <license>
+            <name>GNU Affero General Public License, Version 3</name>
+            <url>http://www.gnu.org/licenses/agpl-3.0-standalone.html</url>
+        </license>
+    </licenses>
     <developers>
         <developer>
             <id>mahnke</id>
