--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
         <license>
             <name>GNU Affero General Public License, Version 3</name>
             <url>http://www.gnu.org/licenses/agpl-3.0-standalone.html</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
     <developers>
